[package]
name = "henosis-cloudflare-authoring"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
henosis-cloudflare-reconciler.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
