[package]
name = "henosis-cloudflare-reconciler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
blake3.workspace = true
buffa.workspace = true
connectrpc.workspace = true
hex.workspace = true
http.workspace = true
iddqd.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
henosis-proto.workspace = true

[lints]
workspace = true
