[package]
name = "henosis-cloudflare-derive-component"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
serde_json.workspace = true
henosis-cloudflare-authoring.workspace = true

[lints]
workspace = true
